
2001-09-10  joe c   <marcus@marcuscom.com>

    * libatalk/util/getiface.c:
	up the new interface by one each time instead of IFACE_NUM

2001-09-10  jeff b  <jeff@univrel.pr.uconn.edu>

	* etc/afpd/afp_options.c, etc/atalkd/main.c, etc/papd/main.c:
	added version reporting with -v switch

2001-09-06  jeff b  <jeff@univrel.pr.uconn.edu>

	* etc/atalkd/main.c, etc/papd/main.c, etc/psf/psf.c,
	libatalk/asp/asp_getsess.c, libatalk/dsi/dsi_getsess.c,
	libatalk/pap/pap_slinit.c, libatalk/util/server_child.c:
	autoconf POSIX.1 sys/wait.h check

	* lots of files: AC_HEADER_STDC autoconf changes

	* sys/netatalk/endian.h: used autoconf endian test instead
	of manually checking every architecture

2001-09-05  joe c <marcus@marcuscom.com>

	* libatalk/cnid/cnid_open.c: comment out DB_JOINENV as this is not
	supported in db3 3.1.17

	* libatalk/cnid/cnid_add.c: fix my comments to properly explain the use
	of rc over errno

2001-09-04  jeff b  <jeff@univrel.pr.uconn.edu>

	* etc/afpd/filedir.h: define veto_file() prototype (Edmund Lam)

	* etc/uams/uams_dhx_pam.c: added quick Sun hack to seed openssl,
	but it *really* needs something more elegant (#458433)

2001-09-04  jeff b  <jeff@univrel.pr.uconn.edu>

	* libatalk/cnid/cnid_add.c, libatalk/cnid/cnid_open.c: fixed
	duplicate DID's being generated and FreeBSD db3 fix (Joe Clarke)

	* doc/README.veto, etc/afpd/directory.c, etc/afpd/enumerate.c,
	etc/afpd/file.c, etc/afpd/filedir.c, etc/afpd/volume.c,
	etc/afpd/volume.h: adds Samba-style "veto file" support
	(Edmund Lam)

	* configure.in: properly checks for db3 headers (Joe Clarke)

2001-08-31  jeff b  <jeff@univrel.pr.uconn.edu>

	* libatalk/cnid/cnid_*.c: compilation fixes for those who don't
	want to compile with CNID support (Edmund Lam)

2001-08-28  Lance Levsen  <l.levsen@printwest.com>

	* config/Makefile.am: Added a variable substitution from
	configure.in to stop overwriting the config files.

	* configure.in: Added --enable-overwrite flag that enables the